--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,25 @@
 cmake_minimum_required (VERSION 3.8)
-project(OpenARG)
+project(OpenARGS)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
-set(OPENARG_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "OpenARG Source Path")
+set(OPENARGS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "OpenARGS Source Path")
 
-option(OPENARG_ENABLE_SAMPLE "Enable Sample Compile" OFF)
+option(OPENARGS_ENABLE_SAMPLE "Enable Sample Compile" OFF)
 
-include_directories(${OPENARG_SOURCE_DIR})
+include_directories(${OPENARGS_SOURCE_DIR})
 
-add_subdirectory(OpenARG)
+add_subdirectory(OpenARGS)
 
-if(OPENARG_ENABLE_SAMPLE)
+if(OPENARGS_ENABLE_SAMPLE)
 
 add_executable(Sample
 	main.cpp
 )
-target_include_directories(Sample PRIVATE ${CMAKE_SOURCE_DIR}/OpenARG)
-target_link_libraries(Sample OpenARG)
+target_include_directories(Sample PRIVATE ${CMAKE_SOURCE_DIR}/OpenARGS)
+target_link_libraries(Sample OpenARGS)
 
 endif()
