--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -17,6 +17,24 @@
 					"type": "BOOL"
 				}
 			]
+		},
+		{
+			"name": "x64-Release",
+			"generator": "Ninja",
+			"configurationType": "RelWithDebInfo",
+			"buildRoot": "${projectDir}\\Output\\${name}",
+			"installRoot": "${projectDir}\\out\\install\\${name}",
+			"cmakeCommandArgs": "",
+			"buildCommandArgs": "",
+			"ctestCommandArgs": "",
+			"inheritEnvironments": [ "msvc_x64_x64" ],
+			"variables": [
+				{
+					"name": "OPENARGS_ENABLE_SAMPLE",
+					"value": "True",
+					"type": "BOOL"
+				}
+			]
 		}
 	]
 }
